{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 42,
  "lineage": "efbfa232-7d56-1de3-8b05-7fe70f1ae4ab",
  "resources": [
    {
      "module": "module.blog_lb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:202559052178:loadbalancer/app/blog-load-balancer/20f4b92896780c14",
            "arn_suffix": "app/blog-load-balancer/20f4b92896780c14",
            "dns_name": "blog-load-balancer-814869457.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:202559052178:loadbalancer/app/blog-load-balancer/20f4b92896780c14",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "blog-load-balancer",
            "security_groups": [
              "sg-08d71a32f01f49d03"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086a32041522a2b14"
              },
              {
                "subnet_id": "subnet-091c365da0d0f622b"
              }
            ],
            "subnets": [
              "subnet-086a32041522a2b14",
              "subnet-091c365da0d0f622b"
            ],
            "vpc_id": "vpc-04e1a64dbcaeb02de",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.vpc.aws_security_group.ecs_security_group",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.blog_lb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:202559052178:listener/app/blog-load-balancer/20f4b92896780c14/e6460d73d9cb62de",
            "certificate_arn": "arn:aws:acm:us-west-2:202559052178:certificate/de2077ed-b6a9-4b39-b738-c2fc90fafbc4",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:202559052178:targetgroup/blog-load-balancer-tg/0223d08ed9ee54dc",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:202559052178:listener/app/blog-load-balancer/20f4b92896780c14/e6460d73d9cb62de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:202559052178:loadbalancer/app/blog-load-balancer/20f4b92896780c14",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blog_lb.aws_alb.load_balancer",
            "module.blog_lb.aws_alb_target_group.target_group",
            "module.vpc.aws_security_group.ecs_security_group",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.blog_lb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:202559052178:targetgroup/blog-load-balancer-tg/0223d08ed9ee54dc",
            "arn_suffix": "targetgroup/blog-load-balancer-tg/0223d08ed9ee54dc",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:202559052178:targetgroup/blog-load-balancer-tg/0223d08ed9ee54dc",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blog-load-balancer-tg",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04e1a64dbcaeb02de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202559052178:internet-gateway/igw-06bc1740ce181d479",
            "id": "igw-06bc1740ce181d479",
            "owner_id": "202559052178",
            "vpc_id": "vpc-04e1a64dbcaeb02de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202559052178:route-table/rtb-0a48faf5488ab9abe",
            "id": "rtb-0a48faf5488ab9abe",
            "owner_id": "202559052178",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06bc1740ce181d479",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-04e1a64dbcaeb02de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a4071eaeac6b04a",
            "route_table_id": "rtb-0a48faf5488ab9abe",
            "subnet_id": "subnet-091c365da0d0f622b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc2fff3df8c9d27e",
            "route_table_id": "rtb-0a48faf5488ab9abe",
            "subnet_id": "subnet-086a32041522a2b14"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202559052178:security-group/sg-08d71a32f01f49d03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08d71a32f01f49d03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20210621033712865600000001",
            "name_prefix": "terraform-",
            "owner_id": "202559052178",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04e1a64dbcaeb02de"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202559052178:subnet/subnet-091c365da0d0f622b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-091c365da0d0f622b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202559052178",
            "vpc_id": "vpc-04e1a64dbcaeb02de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202559052178:subnet/subnet-086a32041522a2b14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-086a32041522a2b14",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202559052178",
            "vpc_id": "vpc-04e1a64dbcaeb02de"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:202559052178:vpc/vpc-04e1a64dbcaeb02de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05aa609ecb49777ad",
            "default_route_table_id": "rtb-092a1d8407205450c",
            "default_security_group_id": "sg-02759a6880edbe1e1",
            "dhcp_options_id": "dopt-2e486056",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04e1a64dbcaeb02de",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092a1d8407205450c",
            "owner_id": "202559052178"
          }
        }
      ]
    }
  ]
}